# fvg-alpha-caller

./: .env.example  .gitignore  Dockerfile  README.md  alert_settings.py  backfill.py  backtest_htf.py  binance_client.py  binance_limit.py  chart_generator.py  cleanup_telegram.py  config.py  cooldown.py  docker-compose.yaml  feature_extractor.py  fvg_engine.py  get_symbols.py  indicator_context.py  kronos_client.py  main.py  model_client.py  notify_bot_webhook.py  requirements.txt  rest_client.py  sim_trades.py  snipe.py  strategy_v2.py  telegram.py  trade_combo.py  trail_manager.py  websocket_client.py
cf-worker/: wrangler.toml  ws-proxy.js
dashboard/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
deploy/: .env.example  README.md  apply_migrations.sh  docker-compose.coolify.yml
trade_executor/: Dockerfile  pyproject.toml  requirements.txt
trade_executor/tests/: conftest.py  test_account_api.py  test_algo_orders.py  test_audit_notify.py  test_crypto.py  test_db.py  test_e2e_signal_flow.py  test_encrypt_endpoint.py  test_exchange.py  test_gate.py  test_http_api.py  test_keys_endpoint_errors.py  test_orchestrator.py  test_orchestrator_guards.py  test_order_placer.py  test_pnl_aggregator.py  test_resume.py  test_signal_poller.py  test_sizing.py  test_trail_manager.py
trade_executor/trade_executor/: account_api.py  algo_orders.py  audit.py  config.py  crypto.py  db.py  exchange.py  gate.py  http_api.py  main.py  notify.py  orchestrator.py  order_placer.py  pnl_aggregator.py  resume.py  signal_poller.py  sizing.py  trail_manager.py
(+114 files in other folders)
