[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trade_executor"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["trade_executor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
